--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yalc",
-  "version": "1.0.0-pre.14",
+  "version": "1.0.0-pre.15",
   "description": "Work yarn packages locally like a boss.",
   "bin": {
     "yalc": "src/yalc.js"
@@ -23,6 +23,7 @@
     "ignore": "^3.2.7",
     "klaw": "^1.3.1",
     "pkgfiles": "^2.3.2",
+    "ts-node": "link:.yalc/ts-node",
     "user-home": "^2.0.0",
     "yargs": "^7.1.0"
   },
