--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "precommit": "yalc check",
     "_prepush": "yarn test",
     "prepublishOnly": "tsc && yarn test",
-    "test": "mocha test",
+    "test": "mocha test && yarn lint",
     "watch": "mocha test --watch",
-    "ci": "tsc && yarn test"
+    "ci": "tsc && yarn test",
+    "lint": "tslint -p ."
   },
   "license": "MIT",
   "dependencies": {
@@ -43,6 +44,7 @@
     "husky": "^0.13.3",
     "mocha": "^3.2.0",
     "ts-clean-built": "^1.0.0",
+    "tslint": "^5.11.0",
     "typescript": "2.6.1-insiders.20171016"
   }
 }
