style: add auto formatter and format everything
Use vscode tslint plugin to autoFormat on save or run `yarn run lint --fix` in the command line

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
 		}			
   },
   "tslint.run": "onSave",
+  "tslint.autoFixOnSave": true,
   "editor.formatOnType": true,
   "editor.tabSize": 2,
   "editor.insertSpaces": true
