--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "clean-ts-built": "^1.0.0",
     "husky": "^0.13.3",
     "mocha": "^3.2.0",
+    "prettier": "^1.14.2",
     "ts-clean-built": "^1.0.0",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "typescript": "2.6.1-insiders.20171016"
   }
 }
