--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
   "dependencies": {
     "del": "^2.2.2",
     "fs-extra": "^4.0.2",
-    "glob": "^7.1.1",
-    "ignore": "^3.2.7",
-    "klaw": "^1.3.1",
-    "pkgfiles": "^2.3.2",
+    "npm-packlist": "^1.1.12",
     "user-home": "^2.0.0",
     "yargs": "^7.1.0"
   },
@@ -38,6 +35,7 @@
     "@types/klaw": "^1.3.2",
     "@types/mocha": "^2.2.40",
     "@types/node": "^6.0.48",
+    "@types/npm-packlist": "^1.1.0",
     "@types/yargs": "^6.6.0",
     "clean-ts-built": "^1.0.0",
     "husky": "^0.13.3",
