--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "yalc",
-  "version": "1.0.0-pre.23",
+  "version": "1.0.0-pre.24",
   "description": "Work yarn packages locally like a boss.",
   "homepage": "https://github.com/whitecolor/yalc",
   "repository": {
     "type": "git",
     "url": "https://github.com/whitecolor/yalc.git"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   },
   "bin": {
     "yalc": "src/yalc.js"
@@ -13,17 +17,18 @@
   "main": "src/index.js",
   "scripts": {
     "build": "tsc",
+    "clean": "trash **/*.js **/*.js.map **/*.d.ts **/*.log !**/node_modules/**",
     "precommit": "yalc check",
-    "prepublishOnly": "tsc && yarn test",
+    "prepublishOnly": "yarn clean && tsc && yarn test",
     "test": "tsc && mocha test && yarn lint",
     "watch": "mocha test --watch",
     "ci": "tsc && yarn test",
     "lint": "tslint -p ."
   },
-  "license": "MIT",
   "dependencies": {
     "del": "^2.2.2",
     "fs-extra": "^4.0.2",
+    "ignore": "^5.0.4",
     "npm-packlist": "^1.1.12",
     "user-home": "^2.0.0",
     "yargs": "^7.1.0"
@@ -45,6 +50,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "2.6.1-insiders.20171016"
-  }
+    "typescript": "^3.2.0-rc"
+  },
+  "license": "MIT"
 }
