--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^0.13.3",
     "mocha": "^5.2.0",
     "prettier": "^1.14.2",
+    "trash-cli": "^1.4.0",
     "ts-clean-built": "^1.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
