--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^3.2.0-rc"
+    "typescript": "^3.2.0-rc",
+    "typescript-tslint-plugin": "^0.1.2"
   },
   "license": "MIT"
 }
