--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,17 +7,23 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "noImplicitThis": true, 
+    "noImplicitThis": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "allowJs": false,
-    "newLine": "LF"
+    "newLine": "LF",
+    "plugins": [
+      {
+        "name": "typescript-tslint-plugin",
+        "alwaysShowRuleFailuresAsWarnings": true
+      }
+    ]
   },
   "formatCodeOptions": {
     "indentSize": 2,
     "tabSize": 2
-  },  
+  },
   "exclude": ["**/node_modules/*"]
 }
