--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fs-extra": "^4.0.2",
     "graceful-fs": "^4.1.15",
     "ignore": "^5.0.4",
-    "npm-packlist": "^1.1.12",
+    "npm-packlist-fixed": "^1.1.12",
     "user-home": "^2.0.0",
     "yargs": "^7.1.0"
   },
