chore: run prettier

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,13 +7,9 @@
     {
       "taskName": "tsc",
       "command": "node",
-      "args": [
-        "./node_modules/typescript/lib/tsc.js",
-        "-w",
-        "-p",
-        "."
-      ],
+      "args": ["./node_modules/typescript/lib/tsc.js", "-w", "-p", "."],
       "isBackground": true,
       "problemMatcher": "$tsc-watch"
-    }]
-  }
+    }
+  ]
+}
