--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0-pre.39",
   "description": "Work with npm/yarn packages locally like a boss.",
   "homepage": "https://github.com/whitecolor/yalc",
-  "workspaces": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/whitecolor/yalc.git"
@@ -21,7 +20,7 @@
     "clean": "trash **/*.js **/*.js.map **/*.d.ts **/*.log !**/node_modules/**",
     "prepublishOnly": "yarn clean && tsc && yarn test",
     "test": "tsc && mocha test && yarn lint",
-    "watch": "mocha test --watch",
+    "test-dev": "ts-node-dev -T --respawn node_modules/mocha/bin/mocha test/index.ts",
     "ci": "tsc && yarn test",
     "lint": "tslint -p ."
   },
@@ -40,17 +39,17 @@
   "devDependencies": {
     "@types/fs-extra": "^7.0.0",
     "@types/glob": "^5.0.30",
-    "@types/mocha": "^2.2.40",
+    "@types/mocha": "^8.0.0",
     "@types/node": "^12.0.7",
     "@types/npm-packlist": "^1.1.0",
     "@types/yargs": "^6.6.0",
     "clean-ts-built": "^1.0.0",
     "husky": "^1.3.1",
-    "mocha": "^5.2.0",
+    "mocha": "^8.0.1",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.8.0",
     "trash-cli": "^1.4.0",
-    "ts-node-dev": "^1.0.0-pre.39",
+    "ts-node-dev": "^1.0.0-pre.55",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-plugin-prettier": "^1.3.0",
