script and colors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,11 @@
     "declaration": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "strict": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "allowJs": false,
     "newLine": "LF",
     "plugins": [
