--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     }
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "fs-extra": "^8.0.1",
     "glob": "^7.1.4",
     "ignore": "^5.0.4",
@@ -46,7 +47,7 @@
     "clean-ts-built": "^1.0.0",
     "husky": "^1.3.1",
     "mocha": "^8.0.1",
-    "prettier": "^1.14.2",
+    "prettier": "^2.0.5",
     "pretty-quick": "^1.8.0",
     "trash-cli": "^1.4.0",
     "ts-clean-built": "^1.2.1",
@@ -54,7 +55,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^3.2.0-rc",
+    "typescript": "^3.9.7",
     "typescript-tslint-plugin": "^0.1.2"
   },
   "license": "MIT"
