--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "detect-indent": "^6.0.0",
     "fs-extra": "^8.0.1",
     "glob": "^7.1.4",
     "ignore": "^5.0.4",
