support rcfile config

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fs-extra": "^8.0.1",
     "glob": "^7.1.4",
     "ignore": "^5.0.4",
+    "ini": "^2.0.0",
     "npm-packlist": "^1.4.1",
     "yargs": "^16.1.1"
   },
