feat: Introduce @jimsheen/yalc - a modernized fork of yalc with enhanced performance and features
- Added README_MODERN.md detailing the new features and performance improvements.
- Created package.json for @jimsheen/yalc with updated dependencies and scripts.
- Updated main package.json to reflect the new package name and version.
- Implemented catalog.ts for optimized catalog handling with intelligent caching.
- Enhanced copy.ts to support catalog dependency resolution.
- Added comprehensive tests for catalog functionality in catalog-comprehensive-test.ts.
- Updated tsconfig.json to include new settings for improved type checking and project structure.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "yalc",
-  "version": "1.0.0-pre.53",
-  "description": "Work with npm/yarn packages locally like a boss.",
-  "homepage": "https://github.com/whitecolor/yalc",
+  "name": "@jimsheen/yalc",
+  "version": "2.0.0-alpha.1",
+  "description": "Local package development tool, modernized and supercharged. Drop-in replacement for yalc with better performance and modern features.",
+  "keywords": [
+    "yalc",
+    "local",
+    "packages",
+    "development",
+    "monorepo",
+    "workspace",
+    "pnpm",
+    "catalog",
+    "modern"
+  ],
+  "homepage": "https://github.com/jimsheen/yalc",
   "repository": {
     "type": "git",
-    "url": "https://github.com/whitecolor/yalc.git"
+    "url": "https://github.com/jimsheen/yalc.git"
   },
+  "bugs": {
+    "url": "https://github.com/jimsheen/yalc/issues"
+  },
+  "author": "Jim Sheen <jim@example.com>",
   "prettier": {
     "semi": false,
     "singleQuote": true
