--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "declaration": true,
     "sourceMap": true,
-    "outDir": "./lib",
+    "outDir": "./dist",
 
     // Strict Type Checking
     "strict": true,
@@ -42,7 +42,6 @@
     "node_modules",
     "**/*.js",
     "**/*.d.ts",
-    "lib/**/*",
     "dist/**/*",
     "tests/**/*"
   ],
