--- a/package.json
+++ b/package.json
@@ -46,25 +46,22 @@
   },
   "scripts": {
     "build": "tsup",
-    "build:tsc": "tsc -p tsconfig.test.json",
     "build:watch": "tsup --watch",
     "clean": "ts-clean-built --old && trash **/*.log && rm -rf dist",
     "prepublishOnly": "pnpm run clean && pnpm run build && pnpm run test",
-    "test": "pnpm run build:tsc && mocha test && pnpm run lint:check",
-    "test:mocha": "pnpm run build:tsc && mocha test",
-    "test:vitest": "vitest run",
-    "test:vitest:watch": "vitest",
-    "test:vitest:ui": "vitest --ui",
-    "test:vitest:coverage": "vitest run --coverage",
+    "test": "vitest run && pnpm run lint:check",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "test:unit": "vitest run src",
     "test:unit:watch": "vitest src",
     "test:unit:coverage": "vitest run --coverage src",
+    "test:integration": "vitest run tests/integration",
     "test:regression": "vitest run tests/regression/regression.test.ts",
-    "test:all": "pnpm run test:mocha && pnpm run test:vitest",
-    "test:full": "pnpm run test:unit && pnpm run test:mocha && pnpm run test:regression",
+    "test:all": "vitest run",
     "regression:capture": "node scripts/regression-validate.js capture",
     "regression:validate": "node scripts/regression-validate.js validate",
-    "test-dev": "ts-node-dev -T --respawn node_modules/mocha/bin/mocha test/index.ts",
+    "test:dev": "vitest --watch",
     "ci": "pnpm run typecheck && pnpm run build && pnpm run test",
     "lint": "eslint src --fix",
     "lint:check": "eslint src",
@@ -89,7 +86,6 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/mocha": "^10.0.10",
     "@types/node": "^24.10.1",
     "@types/npm-packlist": "^7.0.3",
     "@types/yargs": "^17.0.34",
@@ -102,12 +98,10 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^1.3.1",
-    "mocha": "^8.0.1",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
     "trash-cli": "^1.4.0",
     "ts-clean-built": "^1.2.1",
-    "ts-node-dev": "^1.0.0-pre.55",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4",
