--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
       "types": "./dist/yalc.d.ts",
       "require": "./dist/yalc.js",
       "import": "./dist/yalc.mjs"
+    },
+    "./config": {
+      "types": "./dist/core/config/types.d.ts",
+      "require": "./dist/core/config/types.js",
+      "import": "./dist/core/config/types.mjs"
     }
   },
   "scripts": {
@@ -66,7 +71,13 @@
     "lint": "eslint src --fix",
     "lint:check": "eslint src",
     "typecheck": "tsc --noEmit",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "dev:cli": "npx tsx src/yalc.ts",
+    "semantic-release": "semantic-release",
+    "test:workflows": "./tests/workflows/test-workflows.sh all",
+    "test:ci-local": "./tests/workflows/test-workflows.sh ci",
+    "test:release-local": "./tests/workflows/test-workflows.sh release",
+    "test:quick": "./tests/workflows/quick-test.sh"
   },
   "husky": {
     "hooks": {
@@ -74,6 +85,8 @@
     }
   },
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
+    "@types/rc": "^1.2.4",
     "chalk": "^5.6.2",
     "detect-indent": "^7.0.2",
     "fs-extra": "^11.3.2",
@@ -81,10 +94,17 @@
     "ignore": "^7.0.5",
     "ini": "^6.0.0",
     "npm-packlist": "^10.0.3",
+    "rc": "^1.2.8",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.6",
+    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.10.1",
     "@types/npm-packlist": "^7.0.3",
@@ -94,12 +114,14 @@
     "@vitest/coverage-v8": "^4.0.8",
     "@vitest/ui": "^4.0.8",
     "clean-ts-built": "^1.0.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^1.3.1",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
+    "semantic-release": "^24.2.9",
     "trash-cli": "^1.4.0",
     "ts-clean-built": "^1.2.1",
     "tsup": "^8.5.1",
