fix: release workflow should wait for CI to complete
Root Cause:
- Release workflow was running independently, duplicating CI checks
- Could attempt to publish even if CI failed
- Violated best practice of only publishing validated code

Solution:
- Changed trigger from 'push' to 'workflow_run' waiting for CI completion
- Added condition to only run if CI workflow succeeded
- Removed duplicate quality gates (typecheck, lint, test) - CI already validates
- Kept only necessary build step for release

Workflow Changes:
- Trigger: on.workflow_run.workflows: ["CI"] with types: [completed]
- Condition: github.event.workflow_run.conclusion == 'success'
- Simplified: Only build for release, skip duplicate validation
- Preserved: Manual workflow_dispatch for dry-run testing

Benefits:
- Guarantees publish only happens after successful CI
- Eliminates duplicate CI work (faster, cleaner)
- Follows GitHub Actions best practices
- Maintains manual trigger capability for testing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
 name: Release
 
 on:
-  push:
+  workflow_run:
+    workflows: ['CI']
+    types: [completed]
     branches: [main, master]
   workflow_dispatch: # Manual trigger for testing
     inputs:
@@ -18,7 +20,7 @@ jobs:
   release:
     name: Release & Publish
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'jimsheen' || inputs.dry_run
+    if: (github.repository_owner == 'jimsheen' && github.event.workflow_run.conclusion == 'success') || inputs.dry_run
     permissions:
       contents: write # for creating GitHub releases
       issues: write # for commenting on released issues
@@ -46,12 +48,8 @@ jobs:
         if: ${{ !env.ACT && !inputs.dry_run }}
         run: npm audit signatures
 
-      - name: Run quality gates
-        run: |
-          npm run typecheck
-          npm run lint:check
-          npm test
-          npm run build
+      - name: Build for release
+        run: npm run build
 
       - name: Semantic Release (Dry Run)
         if: ${{ inputs.dry_run }}
