--- a/package.json
+++ b/package.json
@@ -122,6 +122,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^1.3.1",
+    "marked-gfm-heading-id": "^4.1.3",
+    "marked-mangle": "^1.1.12",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
     "semantic-release": "^21.1.2",
