fix: replace pnpm with npm in CI scripts
CI Environment Compatibility:
- Changed test script from `pnpm run lint:check` to `npm run lint:check`
- Updated prepublishOnly script to use npm consistently
- Updated ci script to use npm instead of pnpm
- Ensures compatibility with GitHub Actions npm environment

Root Cause:
- CI was failing because test script called `pnpm run lint:check`
- GitHub Actions uses npm by default, pnpm was not available
- Test command: `vitest run && pnpm run lint:check` was breaking on second part

Changes:
- test: vitest run && npm run lint:check
- prepublishOnly: npm run clean && npm run build && npm run test
- ci: npm run typecheck && npm run build && npm run test

All scripts now use npm consistently for CI compatibility

--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "build": "tsup",
     "build:watch": "tsup --watch",
     "clean": "ts-clean-built --old && trash **/*.log && rm -rf dist",
-    "prepublishOnly": "pnpm run clean && pnpm run build && pnpm run test",
-    "test": "vitest run && pnpm run lint:check",
+    "prepublishOnly": "npm run clean && npm run build && npm run test",
+    "test": "vitest run && npm run lint:check",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
@@ -67,7 +67,7 @@
     "regression:capture": "node scripts/regression-validate.js capture",
     "regression:validate": "node scripts/regression-validate.js validate",
     "test:dev": "vitest --watch",
-    "ci": "pnpm run typecheck && pnpm run build && pnpm run test",
+    "ci": "npm run typecheck && npm run build && npm run test",
     "lint": "eslint src --fix",
     "lint:check": "eslint src",
     "typecheck": "tsc --noEmit",
