fix: disable prepublishOnly script in CI to prevent release workflow failures
- Modified prepublishOnly to skip in CI environment since build/test already done
- Added prepublish-local for manual local publishing
- Updated release workflow to clean before build
- Fixed npm plugin configuration in .releaserc.js

The CI workflow already handles clean, build, and test, so running prepublishOnly again in the release workflow was causing failures.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,8 +48,8 @@ jobs:
         if: ${{ !env.ACT && !inputs.dry_run }}
         run: npm audit signatures
 
-      - name: Build for release
-        run: npm run build
+      - name: Clean and build for release
+        run: npm run clean && npm run build
 
       - name: Semantic Release (Dry Run)
         if: ${{ inputs.dry_run }}
