fix: add publishConfig to make scoped package public
- Added publishConfig.access: 'public' to package.json
- Fixes npm 402 Payment Required error for scoped packages
- Allows @jimsheen/yalc to be published as a public package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "semi": false,
     "singleQuote": true
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "bin": {
     "yalc": "dist/yalc.js"
   },
