--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@jimsheen/yalc",
   "version": "2.0.0-alpha.1",
   "description": "Local package development tool, modernized and supercharged. Drop-in replacement for yalc with better performance and modern features.",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "keywords": [
     "yalc",
     "local",
